✏️[frontend] spacing fixed

--- a/src/components/beta-mini-site.css
+++ b/src/components/beta-mini-site.css
@@ -17,12 +17,13 @@
         display: flex;
         flex-direction: column;
 
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
 
         box-sizing: border-box;
 
         padding: 2em;
+        gap: 30px;
 
         a {
             font-weight: bold;
@@ -64,7 +65,7 @@
             flex-direction: column;
             align-items: start;
     
-            margin: 20px 0px 20px 0px;
+            margin: 10px 0px 10px 0px;
     
             h5, p {
                 margin: 0;
